--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+*{margin:0px;padding:0px;}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +11,38 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.Banner{
+	background-color:darkblue;
+	display:flex;
+	width:100vw;
+	height:5vh;
+	justify-content:center;
+	align-items:center;
+}
+
+.searchBar{
+	height:60%;
+	width:20%;
+	border-radius:20px;
+	padding:2px;
+	padding-left:10px;
+}
+
+.pageContainer{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+
+.listItem--selectable{
+	cursor:pointer;
+	border-radius: 20px;
+	text-align:center;
+	padding:5px;
+}
+
+.listItem--selectable:hover{
+	box-shadow: 0px 0px 2px 1px gray;
 }
