--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 *{margin:0px;padding:0px;}
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,36 +12,110 @@ code {
     monospace;
 }
 
-.Banner{
-	background-color:darkblue;
+.App{
+	height:100vh;
 	display:flex;
-	width:100vw;
-	height:5vh;
+	flex-direction:column;
+	background-size:cover;
+}
+
+.Banner{
+	position:absolute;
+	top:0px;
+	border-radius:20px;
+	display:flex;
+	justify-self:center;
+	align-self:center;
+	width:98vw;
+	height:8vh;
 	justify-content:center;
 	align-items:center;
 }
 
 .searchBar{
 	height:60%;
-	width:20%;
+	width:40%;
 	border-radius:20px;
 	padding:2px;
 	padding-left:10px;
 }
 
 .pageContainer{
+	flex-grow:1;
+	height:100vh;
 	display:flex;
 	justify-content:center;
 	align-items:center;
 }
 
-.listItem--selectable{
+.LocationList{
+	background-color:white;
+	box-shadow: 0px 0px 2px 1px black;
+	border-radius:20px;
+	max-height:70vh;
+	overflow-y:auto;
+	margin-left:auto;
+	margin-right:auto;
+	width:80vw;
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	flex-wrap:wrap;
+}
+
+.LocationCard{
 	cursor:pointer;
 	border-radius: 20px;
 	text-align:center;
-	padding:5px;
+	padding:40px;
+	margin:10px;
 }
 
-.listItem--selectable:hover{
+.LocationCard:hover{
 	box-shadow: 0px 0px 2px 1px gray;
+}
+
+.WeatherView{
+	padding:20px;
+	display:flex;
+	flex-direction:column;
+	background-color:white;
+	margin-top:50px;
+	width:80vw;
+	height:80%;
+	border-radius:20px;
+	overflow-y:auto;
+}
+
+.dayRow{
+	width:100%;
+	display:flex;
+	flex-wrap:wrap;
+	align-items:center;
+	justify-content:center;
+
+}
+
+.dayCard{
+	border:1px solid gray;
+	border-radius:20px;
+	width:200px;
+	margin:10px;
+	padding:5px;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	justify-content:center;
+	display:inline-block;
+}
+
+.card__attribute{
+	align-items:center;
+	justify-content:center;
+	display:flex;
+}
+
+.card__image{
+	width:30%;
+
 }
