--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap'); 
+@keyframes fadeIn {   0%   {opacity: 0%;}   100% {opacity: 100%;} }
+
 *{margin:0px;padding:0px;}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
 
 .App{
@@ -99,6 +95,7 @@ code {
 .dayCard{
 	border:1px solid gray;
 	border-radius:20px;
+	box-shadow:1px 1px 9px 1px gray;
 	width:200px;
 	margin:10px;
 	padding:5px;
@@ -106,16 +103,55 @@ code {
 	flex-direction:column;
 	align-items:center;
 	justify-content:center;
-	display:inline-block;
 }
 
 .card__attribute{
 	align-items:center;
 	justify-content:center;
 	display:flex;
+	white-space: nowrap;
+  overflow: hidden;
+	text-overflow: ellipsis;
+	width:80%;
+	margin-bottom:10px;
+} 
+
+.attribute__value{
+	margin-left:auto;
+}
+
+.imageContainer{
+	width:100%;
+	border-radius:20px;
+	height:100px;
+	display:flex;
+	justify-content:center;
+	margin-bottom:20px;
 }
 
 .card__image{
 	width:30%;
-
 }
+
+.clickableIcon{
+	cursor:pointer;
+	margin-right:10px;
+}
+
+.Notification{ 	
+	display:flex; 	
+	justify-content: center; 	
+	align-items: center; 	
+	position:absolute; 	
+	width:80%; 	
+	height:20%; 	
+	border-radius:20px;
+	z-index:2; 	
+	animation-name:fadeIn; 	
+	animation-duration:1.5s; 
+	box-shadow: 0px 0px 2px 1px black;
+} 
+
+.Notification__text{ 	
+	color:black; 
+} 
