--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap'); 
+
+*{margin:0px;padding:0px;}
+
 @keyframes fadeIn {   
 	0%   {opacity: 0%;}   
 	100% {opacity: 100%;} 
 }
-
-*{margin:0px;padding:0px;}
-
 
 body {
   -webkit-font-smoothing: antialiased;
@@ -42,6 +42,7 @@ body {
 	border-radius:20px;
 	background-color:white;
 }
+
 .searchImage{
 	padding-left:10px;
 	height:20px;
@@ -58,8 +59,8 @@ body {
 
 .searchBar__input:focus{
 	outline:none;
-
 }
+
 .pageContainer{
 	flex-grow:1;
 	height:100vh;
@@ -141,7 +142,6 @@ body {
 	flex-wrap:wrap;
 	align-items:center;
 	justify-content:center;
-
 }
 
 .dayCard{
@@ -158,6 +158,7 @@ body {
 }
 
 .weather__header{
+	position:relative;
 	margin-bottom: 20px;
 	display: flex;
 	align-items: center;
@@ -196,7 +197,7 @@ body {
 .clickableIcon{
 	cursor:pointer;
 	margin-right:10px;
-	height:20px;
+	height:30px;
 }
 
 .Notification{ 	
@@ -251,7 +252,7 @@ body {
 
 	.LocationCard h1{
 		width:100%;
-		font-size:12px;
+		font-size:18px;
 		text-align:center;
 		text-justify:center;
 	}
@@ -269,5 +270,10 @@ body {
 	}
 	.attribute__image.humidity{
 		margin-left: 4px;
+	}
+	.clickableIcon{
+		position: absolute;
+		left:0px;
+		top:0px;
 	}
 }
